--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
+certifi==2021.10.8
+charset-normalizer==2.0.9
 click==7.1.2
+gl==0.2.36
+idna==3.3
+numpy==1.21.4
+opencv-python==4.5.5.62
+Pillow==9.0.0
 PyQt5==5.15.4
 pyqt5-plugins==5.15.4.2.2
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
 pyqt5-tools==5.15.4.3.2
+pyqtgraph==0.12.3
 PySide2==5.15.2
 python-dotenv==0.19.2
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
+requests==2.26.0
 shiboken2==5.15.2
+urllib3==1.26.7
