--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pyqt5-tools==5.15.4.3.2
 pyqtgraph==0.12.3
 PySide2==5.15.2
 python-dotenv==0.19.2
+pywin32==303
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
 requests==2.26.0
